# microbench

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  versions.json
.github/workflows/: docs.yml  python-package.yml
1.1/: 404.html  index.html  objects.inv  sitemap.xml
1.1/api-reference/: index.html
1.1/changelog/: index.html
1.1/getting-started/: index.html
1.1/search/: search_index.json
1.1/user-guide/configuration/: index.html
1.1/user-guide/extending/: index.html
1.1/user-guide/mixins/: index.html
1.1/user-guide/monitoring/: index.html
1.1/user-guide/output/: index.html
2.0/: 404.html
2.0/api-reference/: index.html
2.0/cli/: index.html
2.0/stylesheets/: extra.css
2.0/user-guide/advanced/: index.html
2.0/user-guide/async/: index.html
2.0/user-guide/configuration/: index.html
2.0/user-guide/extending/: index.html
2.0/user-guide/output/: index.html
2.1/: objects.inv  sitemap.xml
2.1/changelog/: index.html
2.1/citing/: index.html
2.1/getting-started/: index.html
2.1/search/: search_index.json
2.1/user-guide/advanced/: index.html
2.1/user-guide/configuration/: index.html
2.1/user-guide/mixins/: index.html
2.1/user-guide/output/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api-reference/: index.html
dev/changelog/: index.html
dev/citing/: index.html
dev/cli/: index.html
dev/getting-started/: index.html
dev/search/: search_index.json
dev/user-guide/advanced/: index.html
dev/user-guide/async/: index.html
dev/user-guide/configuration/: index.html
dev/user-guide/extending/: index.html
dev/user-guide/mixins/: index.html
dev/user-guide/monitoring/: index.html
dev/user-guide/output/: index.html
docs/: api-reference.md  citing.md  cli.md  getting-started.md  index.md
docs/user-guide/: advanced.md  async.md  configuration.md  extending.md  mixins.md  monitoring.md  output.md
microbench/: __init__.py  __main__.py  _encoding.py  _mixins.py  _output.py  _version.py  diff.py  livestream.py  mixins.py  version.py
microbench/cli/: __init__.py  main.py  parser.py  registry.py  runner.py
microbench/core/: __init__.py  bench.py  contexts.py  encoding.py  monitoring.py
microbench/mixins/: __init__.py  base.py  call.py  gpu.py  profiling.py  python.py  system.py  vcs.py
microbench/outputs/: __init__.py  base.py  file.py  http.py  redis.py  utils.py
microbench/tests/: globals_capture.py  test_base.py  test_cli.py  test_conda.py  test_core.py  test_diff.py  test_line_profiler.py  test_mixins.py  test_nvidia.py  test_output.py  test_psutil.py
tests/: globals_capture.py  test_cli.py  test_conda.py  test_core.py  test_line_profiler.py  test_livestream.py  test_mixins.py  test_output.py
