[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "microbench"
dynamic = ["version"]
description = "Micro-benchmarking framework. Extensible, with distributed/cluster support."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [{ name = "Alex Lubbock", email = "code@alexlubbock.com" }]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",    
]

[project.scripts]
microbench = "microbench.__main__:main"

[project.urls]
Homepage = "https://github.com/alubbock/microbench"

[project.optional-dependencies]
redis = ["redis"]
test = ["pytest", "pytest-asyncio", "pytest-cov", "pandas", "numpy", "line_profiler", "psutil"]
docs = ["mkdocs-material", "mkdocstrings[python]", "mike", "pymdown-extensions"]

[tool.setuptools.packages.find]
where = ["."]
include = ["microbench*"]
exclude = ["tests*"]

[tool.setuptools_scm]
# Writes the version to a file so it is available without a git checkout
# (e.g. in sdist/wheel installs). The file is regenerated on every
# `pip install -e .` or build.
version_file = "microbench/_version_scm.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
# pandas is imported to test that its version is captured in global packages
"tests/globals_capture.py" = ["F401"]
